preventing H tag from wrapping

--- a/drupal/sites/all/themes/nurani/scss/pages/_page-front.scss
+++ b/drupal/sites/all/themes/nurani/scss/pages/_page-front.scss
@@ -66,12 +66,13 @@ h2{ margin-bottom:1em;}
   }
   h3 {
     margin-bottom:1em;
+    white-space:nowrap;
     a{
       @include bundle-typography-regular;
       color:$nurani-text-gray;
       text-decoration:none;
       font-weight: lighter;
-      font-size: 2.1429em;
+     
     }
   }
 
@@ -108,7 +109,7 @@ h2{ margin-bottom:1em;}
     padding:10px;
 
     .views-field-field-bundle{
-      @include span-columns(5,10);
+      @include span-columns(6,10);
   
       span.passage{
         display: inline-block;
@@ -118,7 +119,7 @@ h2{ margin-bottom:1em;}
     }
 
     .views-field-nothing, .views-field-new-comments, .views-field-view{ 
-      @include span-columns(5 omega,10);
+      @include span-columns(4 omega,10);
     }
 
     .views-field-nothing, .views-field-new-comments{
